[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/TempleBlocks/lava_top_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/TempleBlocks/lava_top.png" type="Texture" id=2]
[ext_resource path="res://Assets/TempleBlocks/lava_mid.png" type="Texture" id=3]
[ext_resource path="res://src/environment/Lava.gd" type="Script" id=4]
[ext_resource path="res://src/Other/Fire.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 7 )

[node name="Lava" type="Node2D"]
z_index = 10
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="LavaMid" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 262144
collision_mask = 40963

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 2 )

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -16, 0 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 262152
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 262152
collide_with_areas = true

[node name="Up" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 0, -1 )
collision_mask = 262144
collide_with_areas = true

[node name="Hor_lava" type="RayCast2D" parent="."]
position = Vector2( -16, 0 )
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 262144
collide_with_areas = true
collide_with_bodies = false

[node name="Hor_lava2" type="RayCast2D" parent="."]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( -40, 0 )
collision_mask = 262144
collide_with_areas = true
collide_with_bodies = false

[node name="Down" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 262152
collide_with_areas = true

[node name="Fire" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -4 )
z_index = -5

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
